almost working hex format